Cleaned code for new sensors

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,9 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit VEML7700 Library@^2.1.2
-	adafruit/DHT sensor library@^1.4.4
-	adafruit/Adafruit SGP30 Sensor@^2.0.0
 	me-no-dev/ESP Async WebServer@^1.2.3
+	dfrobot/DFRobot_ENS160@^1.0.1
+	adafruit/Adafruit AHTX0@^2.0.3
 
 [env:esp32-s3-devkitc-1]
 board = esp32-s3-devkitc-1
